# resource-model

./: .gitignore  .travis.yml  pylintrc  pyproject.toml  setup.cfg  tox.ini
docs/source/: conf.py
examples/: zone
src/resourcemodel/: entrypoint.py  openapiconverter.py  openapiv3.py  utils.py
src/resourcemodel/tests/: dummy_test.py
