[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools-scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 79
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.?venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
