[metadata]
name = Resource-Model
description = "OpenAPI 3 resource model compiler."
long_description = file: README.md
license = Apache 2.0
classifiers =
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython


[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
entry_points = file: entry_points.txt
install_requires = 
    jsonschema>=2.6.0
    PyYAML>=3.12
[options.packages.find]
where = src

###############################################################################
[easy_install]
allow_hosts =
